fix: color of light-button in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -529,7 +529,7 @@ h2 {
   border-color: var(--bs-gray-800) !important;
 }
 
-:root[data-theme='dark'] .btn {
+:root[data-theme='dark'] .btn:not(.btn-light) {
   --bs-btn-color: var(--bs-white);
 }
 
